--- a/src/views/manager/instance/edit-Instance-index.ejs
+++ b/src/views/manager/instance/edit-Instance-index.ejs
@@ -102,6 +102,15 @@
                 <% }else if(InstanceInfo.instance_session && InstanceInfo.instance_session.phone_connected){ %>
                   <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
                     <div class="text-center mt-2 mt-md-0">
+                      <% if (InstanceInfo?.instance_session && InstanceInfo.instance_session?.user && InstanceInfo.instance_session.user?.profile_img) { %>
+                        <p class="h6 text-white mb-1">                    
+                          <span class="b-avatar rounded mb-2 text-center" style="width: 70px; height: 70px;">
+                            <span class="b-avatar-img d-flex justify-content-center">
+                              <img src="<%= InstanceInfo.instance_session.user?.profile_img %>" class="rounded shadow-success" alt="avatar" style="width: 70px; height: 70px;">
+                            </span>
+                          </span>                                 
+                        </p>
+                      <% } %>
                       <p class="h6 text-white mb-1">
                         Telefone: <%= InstanceInfo.instance_session.user.id %>
                       </p>
@@ -111,7 +120,6 @@
                       <p class="h6 text-white mb-0">
                         Uptime: <%= InstanceInfo.instance_session.uptime %>
                       </p>
-
                     </div>
                   </div>
                   <% } %>
