--- a/src/views/layout/full-layout.ejs
+++ b/src/views/layout/full-layout.ejs
@@ -111,7 +111,7 @@
                   </a>
                 </li>
 
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link text-dark fs-6 d-flex align-items-center" data-bs-toggle="collapse"
                     href="#sidebarEvents" aria-expanded="true" aria-controls="sidebarEvents">
                     <i class="bi bi-arrow-repeat fw-bolder me-2"></i>
@@ -135,7 +135,7 @@
                       </li>
                     </ul>
                   </div>
-                </li>
+                </li> -->
               </ul>
 
             </div>
