--- a/src/views/layout/full-layout.ejs
+++ b/src/views/layout/full-layout.ejs
@@ -111,7 +111,7 @@
                   </a>
                 </li>
 
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                   <a class="nav-link text-dark fs-6 d-flex align-items-center" data-bs-toggle="collapse"
                     href="#sidebarEvents" aria-expanded="true" aria-controls="sidebarEvents">
                     <i class="bi bi-arrow-repeat fw-bolder me-2"></i>
@@ -128,14 +128,14 @@
                           <i class="bi bi-link-45deg"></i> Webhook
                         </a>
                       </li>
-                      <li>
+                      <!-- <li>
                         <a class="nav-link text-dark ps-3" href="/manager/instance/<%= key %>/events/web-socket">
                           <i class="bi bi-diagram-3-fill"></i> WebSocket
                         </a>
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
-                </li> -->
+                </li>
               </ul>
 
             </div>
