--- a/src/views/layout/header.ejs
+++ b/src/views/layout/header.ejs
@@ -1,4 +1,4 @@
-<header class="navbar navbar-dark sticky-top bg-theme flex-md-nowrap p-0 shadow">
+<header class="navbar navbar-dark sticky-top bg-theme flex-md-nowrap p-0 ">
   <a class="navbar-brand col-md-3 col-lg-2 me-0 px-2 text-start" href="/manager">
 
     <!-- esconder span em telas menores -->
