fix: show version dashboard

--- a/views/manager/dashboard.ejs
+++ b/views/manager/dashboard.ejs
@@ -5,7 +5,14 @@
       <div class="row">
         <div class="text-start col-6">
           <h1 class="h6 mb-0 text-white lh-1">Bem vindo</h1>
-          <small>Total de instâncias <span id="amount_instance">0</span></small>
+          <small>Total de instâncias: <span id="amount_instance">0</span></small>
+          <br>
+          <small>Versão WhatsApp:
+            <span id="version_whatsapp" class="text-success">
+             <b>${version_whatsapp}</b>
+            </span>
+          </small>
+
         </div>
         <!-- criar nova instância -->
         <div class="text-end col-6">
